--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
   </head>
   <body>
-    <div id="root">Hello Saurav</div>
+    <div id="root">Hello</div>
   </body>
   <script type="module" src="./app.js"></script>
 </html>
